<resources>
    <string name="app_name">Mufti Catalog Film</string>
    <string name="title_movie">Movie</string>
    <string name="title_tv_show">Tv Show</string>
    <string name="title_favorite">Favorite List</string>
    <string name="poster_show">poster_show</string>
    <string name="cth_dec">example</string>
    <string name="valueRating">0.0</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="img_poster">Image Poster</string>
    <string name="genre">Genre</string>
    <string name="runtime">Runtime</string>
    <string name="language">Language</string>
    <string name="overview">Overview</string>
    <string name="failure_data">Failed to retrieve data</string>
    <string name="movie_popular">Movie Popular</string>
    <string name="tv_popular">Tv Show Popular</string>
    <string name="networks">Networks</string>
    <string name="last_air_date">Last Air</string>
    <string name="title_activity_Favorite">FavoriteActivity</string>
    <string name="realm_insert_notification">List Successfully Saved!</string>
    <string name="realm_delete_notification">Successfully deleted from the Favorites List</string>
    <string name="alert_delete_title">Delete Favorite List</string>
    <string name="alert_delete_message">Are you sure you want to delete this film from your Favorite List?</string>
    <string name="alert_yes">Yes</string>
    <string name="alert_no">No</string>
    <string name="change_language_settings">Setting Language</string>
    <string name="runtime_hour">Hour</string>
    <string name="runtime_minute">Minute</string>
    <string name="release">Release</string>
    <string name="movie_favorite">Movie Favorite</string>
    <string name="tv_show_favorite">Tv Show Favorite</string>
    <string name="result_movie">Movie search results from \"</string>
    <string name="search_movie">Search Movie</string>
    <string name="search_tv">Search Tv Show</string>
    <string name="result_tv">Tv Show search results from \"</string>
    <string name="no_result">No Result</string>
    <string name="empty_text">Favorite movie is empty</string>
    <string name="setting_reminder">Setting Reminder</string>
    <string name="daily_reminder">Daily Reminder</string>
    <string name="desc_reminder">Reminder to open the application every 7am</string>
    <string name="release_today_reminder">Release Today Reminder</string>
    <string name="desc_release_today">Provide information about the film released today</string>
    <string name="title_empty">No film released today</string>
    <string name="desc_empty">Let`s see the most popular films</string>
    <string name="appwidget_text">Movie Favorite</string>
    <string name="desc_daily_notification">Come see the most popular films</string>
    <string name="set_reminder_release">Release film reminder has been activated</string>
    <string name="cancel_reminder_release">Release film reminder has been turned off</string>
    <string name="set_reminder_daily">Daily Reminder has been activated</string>
    <string name="cancel_reminder_daily">Daily Reminder has been turned off</string>
</resources>
