<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activity.DetailActivity"
    tools:showIn="@layout/activity_detail">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_detail_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/roboto_slab_bold"
            android:textColor="@color/yellowRating"
            android:textSize="24sp"
            app:layout_constraintEnd_toStartOf="@+id/rb_detail_rating"
            app:layout_constraintHorizontal_bias="0.8"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_detail_language"
            tools:text="8.3" />

        <android.support.v7.widget.AppCompatRatingBar
            android:id="@+id/rb_detail_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:isIndicator="true"
            android:numStars="5"
            android:stepSize="0.05"
            android:theme="@style/RatingBar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.64"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_detail_language" />

        <ImageView
            android:id="@+id/img_detail_poster_mini"
            android:layout_width="80dp"
            android:layout_height="120dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/img_poster"
            android:scaleType="centerCrop"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@color/colorAccent" />


        <TextView
            android:id="@+id/tv_detail_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="sans-serif-condensed-light"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/img_detail_poster_mini"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Avenger: End Game" />

        <TextView
            android:id="@+id/textView"
            style="@style/TableHead"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:text="@string/genre"
            app:layout_constraintStart_toEndOf="@+id/img_detail_poster_mini"
            app:layout_constraintTop_toBottomOf="@+id/tv_detail_title" />

        <TextView
            android:id="@+id/textView_runtime_networks"
            style="@style/TableHead"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:text="@string/runtime"
            app:layout_constraintStart_toEndOf="@+id/img_detail_poster_mini"
            app:layout_constraintTop_toBottomOf="@+id/tv_detail_genre" />

        <TextView
            android:id="@+id/textView_release_air"
            style="@style/TableHead"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:text="@string/release"
            app:layout_constraintStart_toEndOf="@+id/img_detail_poster_mini"
            app:layout_constraintTop_toBottomOf="@+id/tv_detail_runtime" />

        <TextView
            android:id="@+id/textView4"
            style="@style/TableHead"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:text="@string/language"
            app:layout_constraintStart_toEndOf="@+id/img_detail_poster_mini"
            app:layout_constraintTop_toBottomOf="@+id/tv_detail_release" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="193dp" />

        <TextView
            android:id="@+id/tv_detail_genre"
            style="@style/TableDetail"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/tv_detail_title"
            tools:text="Action" />

        <TextView
            android:id="@+id/tv_detail_runtime"
            style="@style/TableDetail"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/tv_detail_genre"
            tools:text="1j 20m" />

        <TextView
            android:id="@+id/tv_detail_release"
            style="@style/TableDetail"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/tv_detail_runtime"
            tools:text="Jon" />

        <TextView
            android:id="@+id/tv_detail_language"
            style="@style/TableDetail"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/tv_detail_release"
            tools:text="En" />

        <TextView
            android:id="@+id/tv_head_overview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/overview"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rb_detail_rating" />

        <TextView
            android:id="@+id/tv_detail_overview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:lineSpacingMultiplier="1"
            android:textColor="@android:color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_head_overview"
            tools:text="Example" />

    </android.support.constraint.ConstraintLayout>

</android.support.v4.widget.NestedScrollView>